create the search box

--- a/src/index.sass
+++ b/src/index.sass
@@ -1,6 +1,7 @@
 @import './sass/reset'
 @import './sass/typography'
 @import './sass/grid'
+@import './sass/form'
 
 \:root
   --color-dark: #141414
