--- a/src/index.sass
+++ b/src/index.sass
@@ -2,11 +2,22 @@
 @import './sass/typography'
 @import './sass/grid'
 @import './sass/form'
+@import './sass/components'
 
 \:root
   --color-dark: #141414
   --color-light: #fff
   --color-accent: #96562B
+  --color-rock: #945151
+  --color-ghost: #ee5c5c
+  --color-electric: #e8e850
+  --color-bug: #b39d7b
+  --color-poison: #c68bdd
+  --color-normal: #96562B
+  --color-fairy: #f1a7b4
+  --color-fire: #f1c685
+  --color-grass: #91d88e
+  --color-water: #75c1f7
 
 body
   background-color: var(--color-dark)
