--- a/src/components/PokemonCard.sass
+++ b/src/components/PokemonCard.sass
@@ -5,6 +5,10 @@
   padding: 24px
   border-radius: 12px
   position: relative
+  transform-style: preserve-3d
+
+  &:hover
+    animation: cardAnimation 3s
 
   &__name
     font-size: 16px
@@ -36,3 +40,15 @@
     height: 136px
     object-fit: contain
     margin-bottom: 8px
+
+  @keyframes cardAnimation
+    0%, 100%
+      transform: translate(0) rotate(0)
+    20%, 80%
+      transform: translateZ(20px) rotate(0)
+    35%
+      transform: translateZ(20px) rotateX(3deg)
+    50%
+      transform: translateZ(20px) rotateX(3deg) rotateY(3deg)
+    65%
+      transform: translateZ(20px) rotateX(3deg) rotateY(-3deg)
