change animation perspective

--- a/src/components/PokemonCard.sass
+++ b/src/components/PokemonCard.sass
@@ -8,6 +8,9 @@
   transform-style: preserve-3d
   transition: all .5s ease-in-out
 
+  &__wrapper
+    perspective: 300px
+
   &:hover
     animation: cardAnimation 2s forwards
     background-color: rgba(#fff, .1)
