Upgrade project to use typescript

--- a/src/index.sass
+++ b/src/index.sass
@@ -1,8 +1,8 @@
-@import './sass/reset'
-@import './sass/typography'
-@import './sass/grid'
-@import './sass/form'
-@import './sass/components'
+@import './styles/reset'
+@import './styles/typography'
+@import './styles/grid'
+@import './styles/form'
+@import './styles/base'
 
 \:root
   --color-dark: #141414
